<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">笑眼看书</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="version_code">版本号1.0.1</string>
     <!-- 读书 -->
    <string name="bk_shelf_title">书籍</string>
    <string name="bk_shop_title">书城</string>
    <string name="accept_msg">接收通知信息</string>
    <string name="auto_update">自动检测并更新版本</string>
    <string name="shoudong_update">手动更新版本</string>
    <string name="clear_cache">清除缓存</string>
    <!-- 侧滑栏activity标题-->
    <string name="setting">系统设置</string>
    <string name="help_center">帮助中心</string>
    <string name="consume_tishi">消费说明</string>
    <string name="consume_text">\u0020\u0020合理的消费结构一定的消费机构，是一定的需求结构和供给结构相互作用的产物。同时，一定的消费结构又转过来给需求结构和供给结构以积极的影响，或促进供给的改善与需求的满足，或延缓着供给的改善与需求的满足。建立一个合理的消费结构模式是实行有计划的商品经济、实现国家经济发展战略的需要。在中国，当前人们公认的合理消费结构具备以下特点:消费构成要同社会的人口构成和需求构成相适应；要运用消费对生产的消息反馈，使供给结构同需求结构更加吻合；要同环境保护、自然资源的合理开发、能源的合理利用以及保持生态系统平衡相适应；要有利于社会主义精神文明建设。</string>
    <string name="about_us">关于我们</string>
    <!--帮助中心-->
    <string name="help_center_text1">1、如何删除书架里的书籍？</string>
    <string name="help_center_text2">2、如何找到自己喜欢的书？</string>
    <string name="help_center_text3">3、如何在手机没有信号或者没有WIFI网络的环境下看书？</string>
    <string name="help_center_text4">4、如何付费？</string>
    <string name="help_center_text5">5、是否有免费书或者优惠活动？</string>
    <string name="help_center_text6">6、支付异常怎么办？</string>
    <string name="help_center_text7">7、下载失败怎么处理？</string>
    <string name="help_center_text8">8、一键登录不成功怎么办？</string>
    <string name="help_center_text9">9、如何设置舒服的预读环境?</string>
    <string name="help_center_text10">10、书临时下架后如何继续阅读？</string>
    <string name="help_center_text11">11、用户状态异常如何处理？</string>
    <string name="help_center_text12">12、如何反馈问题和提出意见？</string>
    <!--Toast-->
    <string name="help_center_msg1">长按书籍封面，在弹出小页面中有删除按钮，可以删除该书；如需批量删除，请点击右上方的菜单按钮，在弹出的下拉框中选择批量管理，可对书架中的书籍进行批量删除操作。</string>
    <string name="help_center_msg2">点击右上方的菜单按钮，在弹出的下拉框中选择逛书城，进入书城页面。我们的编辑为您精心筛选出了丰富的图书内容，当然您也可以直接进入搜索自己想看的书。</string>
    <string name="help_center_msg3">如果您需要在旅途中或者没有网络环境的时候阅读，可以在书籍详情页以及阅读页右上角点击下载按钮，提前将图书的全部或者部分章节内容下载下来，批量下载还可以享受8折优惠哦~</string>
    <string name="help_center_msg4">由于我们为您提供的全部是正版小说，所以大部分书是收费的，笑眼看书通过和运营商合作，采用话费支付的方式，不需要单独充值，看一章或者一本扣一章的费用，这样不仅操作简单而且有效保护您的权益，收费金额为0.12元/章。</string>
    <string name="help_center_msg5">您在阅读页和书籍详情页都可以找到批量下载按钮，批量下载可以享受8优惠！此外，为了回馈用户，我们每天会推出大量限时免费精品书籍，请您留意限免时间段。</string>
    <string name="help_center_msg6">一旦出现“支付异常”可以重新试几次，如果仍然失败，可能系统正在维护中或者临时故障或者书籍暂时下架，请注意系统的通知信息。</string>
    <string name="help_center_msg7">一旦出现“下载失败”，可以重新试几次，如果仍然失败，请您检查下网络情况.</string>
    <string name="help_center_msg8">如果出现一键登录不成功，首先检查网络是否有问题，如果网络正常，可以多试几次确保成功。</string>
    <string name="help_center_msg9">进入阅读页面后，点击屏幕中间，在下方的弹出的菜单中有阅读设置可以选择阅读背景，调节亮度和字体。</string>
    <string name="help_center_msg10">如果书读了一部分临时下架了，我们会和版权方积极协商，一旦上架后会第一时间通知您。</string>
    <string name="help_center_msg11">出现用户状态异常的提示后，请拨打中国移动的客服电话10086，申请恢复正常使用中国移动手机阅读业务，从中国移动手机阅读基地的黑名单库恢复正常使用。</string>
    <string name="help_center_msg12">点击书架左上方的用户中心按钮，在滑出的页面中，点击提意见按钮，编辑您要对我们提出的建议或者提出在使用时遇到的问题发送给我们，我们的服务团队会在第一时间。</string>
     <!--关于我们  -->
     <string name="about_text1">1、笑眼看书，汇聚全网最全的网络小说，免费阅读，免费全本下载！海量劲爆爽文，所有大神作品，只有你不知道，没有你看不到。更有各种活动疯狂送礼，不仅不需要付费，更送你丰厚的软妹币！让阅读成为享受，让你笑眼常开，让你爽到HIGH！</string>
     <string name="about_text2">2、免费小说：免费阅读海量作品，一次读够，一次读爽！更提供免费全本下载功能，在任何没有网的角落，你都能读到最劲爆的爽文！</string>
     <string name="about_text3">3、疯狂送软妹币：笑眼的壕你不懂。我们不送Q币，不送充值币，要送只送软妹币！只要你参与任一活动，都有可能获得大把软妹币。</string>
     <string name="about_text4">4、海量精品：全网最全的网络小说，任何类型的爽文，只要你想看，没有看不到。精瓶梅、苍老湿……你懂的！</string>
     <string name="about_text5">5、精品推荐：我们有最专业的编辑团队，筛选出全网最好看的劲爆小说，每天推送到你眼前。</string>
     <string name="about_text6">6、接收邮箱：3266108264@qq.com</string>
     <string name="about_text7">7、咨询电话：15801312242</string>
     <string name="about_text8">8、咨询QQ：3266108264</string>
     <string name="about_text9">9、书友群:439178240</string>
     <string name="about_text10">10、微信:xiaoyankanshu</string>
     <string name="version_update">版本更新</string>
     <string name="user_msg">使用协议</string>
     <string name="boottom_text1">雪凝盛源  版权所有</string>
     <string name="boottom_text2">Copyright@2015xuening</string>
     <string name="boottom_text3">All Rights Reserved.</string>
     <!--用户协议 -->
     <string name="user_text1">使用协议</string>
     <string name="user_text2">笑眼看书软件使用协议（以下简称“本协议”）是北京雪凝盛源科技有限公司（以下简称“雪凝”）与您笑眼看书软件（以下简称“笑眼”软件）的安装及使用的相关事项所订立的有效合约。您通过点击确认本协议或以其他的方式选择接受本协议，即表示您已于雪凝达成协议并同意接受本协议的全部如下约定内容。</string>
     <string name="user_text3">一、您充分理解并确认，在接受本协议之前，您已经仔细阅读本协议的全部内容。如您不同意接受本协议的任意内容，或者无法准确理解相关条款含义的，请不要进行后续操作。否则您一旦安装、复制、下载、访问或以其他方式使用笑眼产品，将视为对本协议的接受。您务必保证从雪凝指定的站点下载的笑眼产品以及雪凝发行的介质上获得的笑眼产品，否则因此导致可能的风险及损失，雪凝不承担任何责任。</string>
     <string name="user_text4">二、知识产权</string>
     <string name="user_text5">1、雪凝是笑眼的著作权人，笑眼的一切知识产权，以及与笑眼相关的所有信息内容，包括但不限于文字表述及其组合、图标、图饰、图像、图表、色彩、页面设计、版面框架、有关数据、附加程序、印刷材料或电子文档等均为雪凝所有，受著作权法和国际著作权条约以及其他知识产权法律法规的保护。未经雪凝许可，任何人不得笑眼进行反向工程（reverse engineer）、反向编译（decompile）或反汇编（disassemble）等侵犯雪凝权利的行为。</string>
     <string name="user_text6">2、雪凝提供的网络服务中包含的任何文本、图片、图形资料均受版权、商标和/或其他财产所有权法律的保护，未经相关权利人同意，上述资料均不得在任何媒体直接或间接发布、播放、出于播放或发布目的而改写或再发行，或者被用于其他任何商业目的。所有这些资料或资料的任何部分仅可作为私人和非商业用途而保存在用户终端内。雪凝不就由上述资料产生或在传送或递交全部或部分上述资料过程中产生的延误、不准确、错误和遗漏或从中产生或由此产生的任何损害赔偿，以任何形式，向用户或任何第三方负责。</string>
     <string name="user_text7">3、笑眼提供的书籍内容仅代表作者自己的立场和观点，与雪凝无关，由作者本人承担一切法律责任。</string>
     <string name="user_text8">三、关于付费</string>
     <string name="user_text9">1、笑眼为免费软件，您可以非商业性、无限制数量地下载、复制、安装及使用本软件。</string>
     <string name="user_text10">2、笑眼下载及使用过程中所产生的流量费用由运营商收取，详情请咨询当地运营商。</string>
     <string name="user_text11">3、笑眼提供的书籍均来自作品著作权人的书面正式授权，您在阅读部分书籍及内容时需要支付少许费用；需要付费阅读的书籍及内容，笑眼会在相关页面给您明确的提示，如果您不同意进行付费阅读，请点击“取消”或“返回”，雪凝不收取任何费用。</string>
     <string name="user_text12">4、笑眼采用的支付方式包括但不限于话费支付、支付宝支付、银联支付等，笑眼会根据您的使用情况为您提供不同的支付方式，您接受本协议代表您接受笑眼为您提供的支付方式。</string>
     <string name="user_text13">四、您的权利和义务</string>
     <string name="user_text14">1、您保证：您通过笑眼所从事的一切活动都是合法的、真实的，不侵害任何第三方的合法权益。</string>
     <string name="user_text15">2、您保证您在使用笑眼的过程不会通过恶意删除、修改、增加软件功能或软件中所存储的数据信息，或者故意避开、破坏雪凝为保护笑眼著作权而采取的技术措施，否则因此导致的所有风险与责任均由您自行承担。同时您在此承诺，不会利用笑眼从事任何非法的或违法本协议的目的的行为，否则雪凝有权立即终止向您提供本服务，并保留通过司法途径向您追责的权利。</string>
     <string name="user_text16">3、您保证不得基于商业目的模仿雪凝的产品和服务；不得复制和模仿雪凝的设计理念、界面、功能和图标；不得未经雪凝许可基于此软件或其内容进行修改或制造派生其他产品。</string>
     <string name="user_text17">4、您不得利用本软件或本软件服务制作、上载、复制、发送、分享违反国家规定的内容。</string>
     <string name="user_text18">5、如您违反本协议规定的任何条款，给雪凝或其他用户造成损失，您必须承担全部的赔偿责任。如雪凝承担了上述责任，则您同意赔偿雪凝的相关支出和损失，包括合理的律师费用。</string>
     <string name="user_text19">6、您同意如您违反本协议规定的任何条款或雪凝的各项规则、通告，雪凝有权单方判断立即终止您使用笑眼，而无需事先通知并不退还已收取的任何费用。</string>
     <string name="user_text20">7、您同意在使用笑眼的同时，同意接受雪凝提供的各类信息服务。</string>
     <string name="user_text21">五、雪凝的权利与义务</string>
     <string name="user_text22">1、雪凝基于笑眼实际运营及网络环境的需要，保留随时对笑眼的进行修改和升级的权利。</string>
     <string name="user_text23">2、您在使用笑眼的过程中，违反本协议规定，对雪凝公司造成损害的。雪凝有权采取包括但不限于中断使用许可、停止提供服务、限制使用、法律追究等措施。</string>
     <string name="user_text24">3、雪凝没有义务对您使用笑眼的行为进行监督。但是，雪凝保留权利在任何时候、无需给予通知并可以凭借任何理由终止您使用笑眼。</string>
     <string name="user_text25">六、 免责及责任的限制</string>
     <string name="user_text26">您理解并同意，笑眼因下列情况无法正常运作时，雪凝不承担损害赔偿责任，该状况包括但不限于：</string>
     <string name="user_text27">1、因台风、地震、海啸、洪水、停电、战争、恐怖袭击等不可抗力之因素，造成本公司系统障碍不能执行业务的。</string>
     <string name="user_text28">2、由于黑客攻击、电信部门技术调整或故障、网站升级、银行方面的问题等原因而造成的服务中断或者延迟。</string>
     <string name="user_text29">3、雪凝不保证笑眼在操作上不会中断或没有错误，不保证雪凝会纠正笑眼的所有缺陷，亦不保证笑眼能满足您的所有要求。</string>
     <string name="user_text30">4、如果您对笑眼的任何部分或本协议的任何部分不满意，您唯一的和全部的解决方案就是停止继续使用笑眼。</string>
     <string name="user_text31">七、 您同意，本协议适用中华人民共和国大陆地区法律。因雪凝与您就本协议的签订、履行或解释发生争议，双方应努力友好协商解决。如协商不成，雪凝和您同意由雪凝住所地法院管辖审理双方的纠纷或争议。</string>
     <string name="user_text32">八、 如果本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，或违反任何试用的法律，则该条款被视为删除，但本协议的其余条款仍应有效并且有约束力。感谢您使用雪凝笑眼阅读软件，任何时候如果您对我们的声明内容有疑问，请联系我们的电子邮箱：3266108264@qq.com</string>
     <string name="bk_shop_title">书城</string>
    <string name="opinion_user">您在使用中有任何不便或建议，欢迎反馈给我们</string>

</resources>