<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#F0F3F5">
    <include 
        layout="@layout/xy_common_activity_title"
        />
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16.3dp"
        android:paddingLeft="16.3dp"
        android:paddingRight="16.3dp">
          <!--使用协议-->
        <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/user_text2"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text3"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text4"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text5"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text6"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text7"
             />
          <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text8"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text9"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text10"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text11"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text12"
             />
     
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text13"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text14"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text15"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text16"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text17"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text18"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text19"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text20"
             />
     
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text21"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text22"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text23"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text24"
             />
    
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text25"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text26"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text27"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text28"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text29"
             />
     
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text30"
             />
     
     
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text31"
             />
         <TextView 
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#525554"
             android:textSize="16.67sp"
             android:lineSpacingExtra="8dp"
             android:text="@string/user_text32"
             />
     </LinearLayout>   
      
    </LinearLayout>
    
     
</ScrollView>
    

</LinearLayout>