<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0F3F5">

    <include layout="@layout/xy_common_activity_title" />
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17.3dp"
            android:paddingLeft="16.7dp"
            android:paddingRight="16.7dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="72.7dp"
                android:layout_height="72.7dp"
                android:src="@drawable/boyi_logo" />

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="17.3sp"
                android:textColor="#010101"
                android:text="@string/app_name" />
            <TextView
                android:id="@+id/version_code"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16.67sp"
                android:textColor="#8c8c8c"
                android:text="@string/version_code" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.7dp"
                android:textSize="16.67sp"
                android:text="@string/about_text1"
                android:textColor="#565656"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16.67sp"
                android:text="@string/about_text2"
                android:textColor="#565656"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16.67sp"
                android:text="@string/about_text3"
                android:textColor="#565656"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16.67sp"
                android:text="@string/about_text4"
                android:textColor="#565656"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16.67sp"
                android:text="@string/about_text5"
                android:textColor="#565656"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16.67sp"
                android:layout_marginTop="5dp"
                android:text="@string/about_text6"
                android:textColor="#565656"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16.67sp"
                android:layout_marginTop="5dp"
                android:text="@string/about_text7"
                android:textColor="#565656"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16.67sp"
                android:text="@string/about_text8"
                android:textColor="#565656"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16.67sp"
                android:text="@string/about_text9"
                android:textColor="#565656"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16.67sp"
                android:text="@string/about_text10"
                android:textColor="#565656"/>
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="38.7dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_marginTop="28.7dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_user_msg" 
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_gray_selector"
                    android:text="@string/user_msg"
                    android:textColor="#474644"
                    android:layout_marginRight="40dp"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
                <Button
                    android:id="@+id/btn_version_update" 
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/version_update"
                    android:textColor="#ffffff"
                    android:background="@drawable/btn_white_to_blue_selector"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="26dp"
                android:paddingBottom="22.7dp"
                android:orientation="vertical">
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="14.7dp"
                android:textColor="#3f3f3f"
                android:text="@string/boottom_text1"
                />
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="14.7dp"
                android:textColor="#3f3f3f"
                android:text="@string/boottom_text2"
                />
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="14.7dp"
                android:textColor="#3f3f3f"
                android:text="@string/boottom_text3"
                />
            </LinearLayout>
            
        </LinearLayout>
    </RelativeLayout>
    </ScrollView>

    

</LinearLayout>